const {
  bootstrap,
  getOutputDevelopment,
  getOutputProduction,
} = require('../../utils');
const fs = require('fs-extra');
const path = require('path');
const Semaphore = require('async-sema');
const tempy = require('tempy');

describe('webpack message formatting', () => {
  const semaphore = new Semaphore(1, { capacity: Infinity });
  let testDirectory;
  beforeAll(async () => {
    testDirectory = tempy.directory();
    await bootstrap({ directory: testDirectory, template: __dirname });
  });
  beforeEach(async () => {
    await semaphore.acquire();
  });
  afterEach(async () => {
    fs.removeSync(path.join(testDirectory, 'src', 'App.js'));
    semaphore.release();
  });

  it('formats babel syntax error', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppBabel.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });

  it('formats css syntax error', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppCss.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });

  it('formats unknown export', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppUnknownExport.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });

  it('formats aliased unknown export', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppAliasUnknownExport.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });

  it('formats no default export', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppNoDefault.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });

  xit('formats missing package', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppMissingPackage.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });

  it('formats eslint warning', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppLintWarning.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    const sizeIndex = response.stdout.indexOf('File sizes after gzip');
    if (sizeIndex !== -1) {
      response.stdout = response.stdout.substring(0, sizeIndex);
    }
    expect(response).toMatchSnapshot();
  });

  it('formats eslint error', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppLintError.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });

  it('helps when users tries to use sass', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppSass.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    fs.moveSync(
      path.join(testDirectory, 'node_modules', 'node-sass'),
      path.join(testDirectory, 'node_modules', 'node-sass-bak')
    );
    try {
      const response = await getOutputProduction({ directory: testDirectory });
      expect(response).toMatchSnapshot();
    } finally {
      fs.moveSync(
        path.join(testDirectory, 'node_modules', 'node-sass-bak'),
        path.join(testDirectory, 'node_modules', 'node-sass')
      );
    }
  });

  xit('formats file not found error', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppUnknownFile.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputProduction({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });

  xit('formats case sensitive path error', async () => {
    fs.copySync(
      path.join(__dirname, 'src', 'AppIncorrectCase.js'),
      path.join(testDirectory, 'src', 'App.js')
    );

    const response = await getOutputDevelopment({ directory: testDirectory });
    expect(response).toMatchSnapshot();
  });
});
