// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack message formatting formats babel syntax error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Syntax error: Unterminated JSX contents (8:13)

   6 |       <div>
   7 |         <span>
>  8 |       </div>
     |             ^
   9 |     );
  10 |   }
  11 | }


",
  "stdout": "",
}
`;

exports[`webpack message formatting formats case sensitive path error 1`] = `
Object {
  "stderr": "Starting the development server...

Failed to compile.

./src/App.js
Module not found: \`/private/var/folders/c3/vytj6_h56b77f_g72smntm3m0000gn/T/4654404388655bb36ea2f1a7fa9ca174/src/export5.js\` does not match the corresponding path on disk \`Export5.js\`.
",
  "stdout": "",
}
`;

exports[`webpack message formatting formats css syntax error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/AppCss.css
Syntax error: Unexpected } (3:2)

  1 | .App {
  2 |   color: red;
> 3 | }}
    |  ^
  4 |


",
  "stdout": "",
}
`;

exports[`webpack message formatting formats eslint error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
  Line 4:  'b' is not defined  no-undef

Search for the keywords to learn more about each error.


",
  "stdout": "",
}
`;

exports[`webpack message formatting formats eslint warning 1`] = `
Object {
  "stderr": "",
  "stdout": "Creating an optimized production build...
Compiled with warnings.

./src/App.js
  Line 3:  'foo' is defined but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

",
}
`;

exports[`webpack message formatting formats file not found error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

Module not found: Error: Can't resolve './ThisFileSouldNotExist' in '/private/var/folders/c3/vytj6_h56b77f_g72smntm3m0000gn/T/70b07b626476276cde42eea49620873c/src'


",
  "stdout": "",
}
`;

exports[`webpack message formatting formats missing package 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

Module not found: Error: Can't resolve 'unknown-package' in '/private/var/folders/c3/vytj6_h56b77f_g72smntm3m0000gn/T/6b5c1989bc1537c8284ff3a581876126/src'


",
  "stdout": "",
}
`;

exports[`webpack message formatting formats no default export 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Attempted import error: './ExportNoDefault' does not contain a default export (imported as 'myImport').


",
  "stdout": "",
}
`;

exports[`webpack message formatting formats unknown export 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Attempted import error: 'bar' is not exported from './AppUnknownExport'.


",
  "stdout": "",
}
`;

exports[`webpack message formatting helps when users tries to use sass 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/AppSass.scss
To import Sass files, you first need to install node-sass.
Run \`npm i node-sass --save\` or \`yarn add node-sass\` inside your workspace.


",
  "stdout": "",
}
`;
